Added TextFile::IsDirectory, if there is no runtime directory navn will now create one

--- a/ChangeLog
+++ b/ChangeLog
@@ -121,6 +121,8 @@ Added isalphibetic and isalphibeticnum, forks of isvalidnick
 Added OnHelp to command classes
 Fixed help module not using the OnHelp call
 Fixed Command->SendSyntax() sending the syntax incorrectly
+Added TextFile::IsDirectory
+Fixed not making a new runtime directory if there isn't one on start
 
 
 Navn 2.0.0
