--- a/ChangeLog
+++ b/ChangeLog
@@ -127,6 +127,7 @@ Moved to CMake
 Added VectorString to convert a Flux::vector to a string
 Renamed StringVector to SerializeString to better describe what it does
 value_cast now forces the cast if casting with stringstreams fails
+renamed fsprintf to printfify to better describe what it does
 
 Navn 2.0.0
 ==========
