--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Justin (Justasic) Crawford - Main Core Developer
 Lordofsraam - Creator of the bot, and algorythem creator
-Jk (DeathBlade) Yang - Creator of the Flux-S3rvices module, Excellent beta tester
+Jk (DeathBlade) Yang - In charge of some modules at times, Excellent beta tester
