--- a/ChangeLog
+++ b/ChangeLog
@@ -143,6 +143,7 @@ Renamed modules to follow the m_ prefix and moved some non-core modules into a f
 Added Multi-Owner support
 Removed flux_net_irc.hpp and defs.h in favor if modules.h and system.cpp
 Added "Welcome Message" to the config file which now optionally displays a custom message on join
+Separated module.cpp into 2 files: module.cpp containing the base module class and modulehandler.cpp containing the modulehandler class
 
 Navn 2.0.0
 ==========
