Updated some more info, we're now on github

--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-This IRC bot was Created by Lordofsraam and developed by Lordofsraam and Justasic on Flux-Net.
+This IRC bot was Created by Lordofsraam and developed by Lordofsraam and Justasic on Azuru.
 All code is licensed under GNU General Public License GPL v3 (http://www.gnu.org/licenses/gpl.html)
 
-Our IRC: irc.flux-net.net
+Our IRC: irc.Azuru.net
 Ports: 6660-6669. SSL: 5000
-Our Website: http://www.flux-net.net/
+Our Website: http://www.Azuru.net/
 SVN: https://flux-net.googlecode.com/svn/trunk/cpp_bot/
-Git: git://gitorious.org/navn/navn.git
-Git Web: https://gitorious.org/navn/navn
+Git: git://github.com/Justasic/Navn.git
+Git Web: https://github.com/Justasic/Navn
 
 System support: Linux/Unix i386 (x86)
 
