Config reader now takes a pointer of its self to test if we're making a new config or rehashing, renamed ParametizeString to ParamitizeString, Added iSupport support which helps with limits on things, Nick, Topic, and Kick messages are now limited by iSupport and will be trimmed if they're too long, IsValidChannel now uses iSupport for chan types, fixed m_logchan having incomplete log messages

--- a/ChangeLog
+++ b/ChangeLog
@@ -157,6 +157,9 @@ Added LOG_WARN for different warnings
 Rewrote how colors are stripped from the log messages
 Check if we're in the terminal before printing to stdout
 Give a warning if server sends messages as an invalid nickname
+Added a SendQ limiter
+Added iSupport support
+Renamed ParametizeString to ParamitizeString (It's more natural)
 
 Navn 2.0.0
 ==========
