Updated some of the docs, Away messages are now trimmed according to the servers max away length

--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Legend:
 	? = unsure
 	+ = in progress
 	$ = half completed
+	# = Scraped
 
 
 Navn 2.0.1
@@ -16,10 +17,10 @@ Navn 2.0.1
   [x] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
   [x] Add some kind of command handler so it can list all loaded commands from all modules
   [+] Fix glibc crashes with this system
-  [ ] Fix crash in timer system
+  [?] Fix crash in timer system
 
-[ ] Fix CHOWN command
-[ ] Fix botnick not changeable
+[#] Fix CHOWN command
+[?] Fix botnick not changeable
 [x] Make default channel's in the config
 [x] Make a server numeric catcher
 [x] Add timed pinging (should handle ping timeouts and connection issues)
