No longer need Config->Binary_Dir we can use the global variable, update docs

--- a/ChangeLog
+++ b/ChangeLog
@@ -160,6 +160,7 @@ Give a warning if server sends messages as an invalid nickname
 Added a SendQ limiter
 Added iSupport support
 Renamed ParametizeString to ParamitizeString (It's more natural)
+Fixed the horrible GLIBC error
 
 Navn 2.0.0
 ==========
