--- a/TODO
+++ b/TODO
@@ -16,11 +16,11 @@ Navn 2.0.1
 [x] Make module system load binary files (.so files)
   [x] Add OnJoin, OnKick, OnKill, OnNick, etc to a class and make use of it in modules
   [x] Add some kind of command handler so it can list all loaded commands from all modules
-  [+] Fix glibc crashes with this system
-  [?] Fix crash in timer system
+  [X] Fix glibc crashes with this system
+  [X] Fix crash in timer system
 
 [#] Fix CHOWN command
-[?] Fix botnick not changeable
+[X] Fix botnick not changeable
 [x] Make default channel's in the config
 [x] Make a server numeric catcher
 [x] Add timed pinging (should handle ping timeouts and connection issues)
