Base class now deletes any forgotten pointers before we exit, signal handler now no longer sends quit on SIGINT- the garbage collector does at exit so we can clear out the buffer, added LOG_DEVEL, Added ModuleHandler::LoadModuleList since ReadConfig() never actually read the config it loaded modules so lets not get confusing here, a few classes now inherit Base

--- a/ChangeLog
+++ b/ChangeLog
@@ -161,6 +161,8 @@ Added a SendQ limiter
 Added iSupport support
 Renamed ParametizeString to ParamitizeString (It's more natural)
 Fixed the horrible GLIBC error
+Added root check
+Removed BotConfig's requirement of binary_dir in it's constructor
 
 Navn 2.0.0
 ==========
