--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Justin (Justasic) Crawford - Main Core Developer
-Lordofsraam - Creator of the bot, and algorythem creator
+Lordofsraam - Creator of the bot, and algorithm creator
+Alyx - Bug fixes
 Jk (DeathBlade) Yang - In charge of some modules at times, Excellent beta tester when needed.
