--- a/TODO
+++ b/TODO
@@ -32,6 +32,7 @@ Navn 2.0.2
 [ ] Add more event handlers (FOREACH_MOD)
 [ ] Add a possible better event handler
 [ ] Add calculator
+[ ] Redo fantasy commands
 [ ] Make searcher module use config for search URL's instead of hard coded ones.
 [x] Add buffer limiter (so freenode does not kill the bot)
 [ ] Better config format
